fixed spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,8 +5,8 @@
     flex-direction: row;
     padding-left: 30px;
     justify-content: space-between;
-    border-bottom: solid rgb(248, 102, 44) 2px;
-    border-top: solid rgb(248, 102, 44) 2px;
+    border-bottom: solid rgb(212, 74, 19) 2px;
+    border-top: solid rgb(212, 74, 19) 2px;
     margin-bottom: 40px;
 }
 
@@ -98,12 +98,13 @@ html {
     background: rgb(241, 225, 225, 0.7);
     width: 800px;
     margin-left: 320px;
-    height: 600px;
+    height: 590px;
     flex-direction: column;
     border: solid 1px rgb(90, 90, 253);
     box-shadow: 2px 2px 29px 15px rgba(255,94,1,1);
     margin-bottom: 0;
     padding: 0;
+    padding-bottom: -10
 }
 
 #about {
@@ -127,7 +128,7 @@ img {
     margin-right: 10px;
     margin-left: 10px;
     position: relative;
-    bottom: 30px;
+    bottom: 26px;
     border: 1px solid blue;
 }
 
@@ -136,7 +137,7 @@ img {
     font-size: 17px;
     margin-left: 10px;
     position: relative;
-    bottom: 35px;
+    bottom: 30px;
 }
 
 .bio {
